...
  TextEditingController _nameController = TextEditingController();

  final RegExp nameExp = new RegExp(r"^[A-Z a-zÀ-ÖØ-öø-ÿ]+$", caseSensitive: false);

  List<String> _categoryList = [
    'Todas',
    'Artes',
    'Shows',
    'Gastronomia',
    'Infantil',
    'Bem-estar',
    'Comédia',
    'Compra',
    'Dança',
    'Esporte',
    'Festa',
    'Filme',
    'Fitness',
    'Jardinagem',
  ];

  final _formKey = GlobalKey<FormState>();

...
                               // Form Categoria
                               Flexible(
                                 child: FormComponents.buildCustomFormSearch(
                                   _categoryController,
                                   Center(
                                     child: DropdownButtonFormField<String>(
                                       key:Key("homecategoria"),
                                       value: _dropdownValueCategory,
                                       icon: const Icon(
                                         Icons.arrow_downward,
                                         color: Colors.white,
                                       ),
                                       iconSize: 24,
...
                               ),

                               SizedBox(width: 10,),

                               //Botão Switch
                               FlutterSwitch(
                                 key: Key("switch"),
                                 width: 150.0,
                                 height: 45.0,
                                 toggleSize: 45.0,
                                 borderRadius: 30.0,
                                 padding: 8.0,
                                 valueFontSize: 16,
                                 showOnOff: true,
                                 toggleColor: CustomColors.colorLightGray,//
                                 activeColor: CustomColors.orangePrimary.shade400,
                                 activeText: "Presencial",
                                 activeTextColor: CustomColors.colorLightGray,//
                                 activeTextFontWeight: FontWeight.w900 ,
                                 inactiveColor: CustomColors.orangePrimary.shade400,
                                 inactiveText: "Virtual",
                                 inactiveTextColor: CustomColors.colorLightGray,//
                                 inactiveTextFontWeight: FontWeight.w900,
...
                  ),
                  child:  Visibility(
                    visible: eventList.isNotEmpty,
                    replacement: Flexible(
                      child: Center(
                        child: Text(
                        'Não há eventos cadastrados',
                        textAlign: TextAlign.center,
                          style: TextStyle(
                          color: CustomColors.orangePrimary.shade400,
                          fontFamily: 'OpenSans',
                          fontSize: 30.0,
                          fontStyle: FontStyle.italic,
...
