...
                  // Categoria TF
                  FormComponents.buildCustomForm(
                    'Categoria do Evento',
                    _categoryController,
                    Center(
                      child: DropdownButtonFormField<String>(
                        key: Key("dropcategoriacadastro"),
                        value: _dropdownValueCategory,
                        validator: (value) {
                          if (value == null || value.isEmpty) {
                            return 'A categoria é um campo obrigatório';
                          } else {
                            return null;
...
                  // Link do evento TF
                  FormComponents.buildCustomTextForm(
                    'Link do Evento',
                    _linkController,
                    TextInputType.url,
                        (value) {
                      if (!isURL(value) && _dropdownValueType == "Online") {
                        return 'Insira um link válido';
                      } else {
                        return null;
                      }
                    },
                    Mdi.linkVariant,
...
                  // Tipo do evento
                  FormComponents.buildCustomForm(
                    'Tipo do Evento',
                    _typeController,
                    Center(
                      child: DropdownButtonFormField<String>(
                        key: Key("tipoevento"),
                        value: _dropdownValueType,
                        validator: (value) {
                          if (value == null || value.isEmpty) {
                            return 'O tipo do evento é um campo obrigatório';
                          } else {
                            return null;
...
