...
                        style: TextStyle(
                          fontWeight: FontWeight.bold,
                          fontFamily: 'OpenSans',
                          fontSize: 18,
                        ),
                      ),
                      Text("Participante",
                        style: TextStyle(
                          fontWeight: FontWeight.bold,
                          fontFamily: 'OpenSans',
                          fontSize: 18,
                        ),
                      ),
...
          ),
        ),
      ),
        floatingActionButton: Visibility(
            visible: widget.user.isPromoter && isSelected[0] == true,
            child: FloatingActionButton.extended(
              key: Key("ButtonCadastro"),
              onPressed: () => Navigator.of(context).pushNamed(registerEventRoute, arguments: widget.user),
              label: const Text(
                "Criar Evento",
                style: TextStyle(
                  fontWeight: FontWeight.bold,
                  fontFamily: 'OpenSans',
...
